# rust-tridiagonal-matrix-vector

./: .gitignore  .gitmodules  Cargo.toml  README.md  example.kra  todo.md
docs/: Task_2.doc  lecture.odt  report CP1.docx  report.odt
lab1/: Cargo.toml  example.kra  example.png-autosave.kra  temp.md
lab1/docs/: Task_1.doc  lecture.odt  report.docx  report.odt
lab1/src/: main.rs  math.rs
lab1/src/math/: coeff_calculator.rs  solver.rs  sparse_matrixes.rs  stepping.rs
lab2/: .gitignore  CMakeLists.txt  example.kra  result.txt  result2.txt
lab2/docs/: Task_2.doc  lecture.odt  my_solution.docx  solution.docx
lab2/include/public/: defines.hpp  input_parameters.hpp  interval_splitter.hpp
lab2/include/public/default_impl/: euler_explicit_method.hpp  euler_implicit_method.hpp  main_matrix_calculator.hpp  rkf_method.hpp
lab2/include/public/interface/: i_base_integrate.hpp  i_euler_explicit_method.hpp  i_euler_implicit_method.hpp  i_euler_method.hpp  i_main_matrix_calculator.hpp
lab2/src/: interval_splitter.cc  main.cc  main.cpp
lab2/src/default_impl/: euler_explicit_method.cc  euler_implicit_method.cc  main_matrix_calculator.cc  rkf_method.cc
lab2/tests/: explicit-eugen-test.cc  implicit-eugen-test.cc
src/: main.rs  math.rs
src/math/: coeff_calculator.rs  solver.rs  sparse_matrixes.rs  stepping.rs
src/solverd/: solver.rs
